--- a/src/scss/variants/bigfoot-number.scss
+++ b/src/scss/variants/bigfoot-number.scss
@@ -19,7 +19,7 @@
 
 // @since 2.1.0
 // @author Chris Sauve
-
+@use '../foundation/bigfoot-variables' as *;
 .bigfoot-footnote__button {
   position: relative;
   height: $button-height;
